# jobstr

./: .pre-commit-config.yaml  pyproject.toml
src/jobstr/: app.py  models.py  settings.py
