[project]
name = "jobstr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["textual>=3.2.0"]

[project.urls]
homepage = "https://dnlzrgz.com/projects/jobstr/"
source = "https://github.com/dnlzrgz/jobstr"
issues = "https://github.com/dnlzrgz/jobstr/issues"
releases = "https://github.com/dnlzrgz/jobstr/releases"

[dependency-groups]
dev = [
  "commitizen>=4.7.2",
  "pre-commit>=4.2.0",
  "ruff>=0.11.10",
  "textual-dev>=1.7.0",
]

[project.scripts]
jobstr = "jobstr:app.init"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
