[project]
name = "jobstr"
version = "0.1.1"
description = "Job application tracker for the terminal."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.2.0",
  "pydantic>=2.11.4",
  "pydantic-settings>=2.9.1",
  "sqlmodel>=0.0.24",
  "textual>=3.2.0",
]

[project.urls]
homepage = "https://dnlzrgz.com/projects/jobstr/"
source = "https://github.com/dnlzrgz/jobstr"
issues = "https://github.com/dnlzrgz/jobstr/issues"
releases = "https://github.com/dnlzrgz/jobstr/releases"

[dependency-groups]
dev = [
  "commitizen>=4.7.2",
  "pre-commit>=4.2.0",
  "ruff>=0.11.10",
  "textual-dev>=1.7.0",
]

[project.scripts]
jobstr = "jobstr:app.init"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
